@@ -36,6 +36,7 @@
 #import <Mailer/NSData+Mail.h>
 #import <Mailer/NSDictionary+Mail.h>
 #import <Mailer/SOGoMailBodyPart.h>
+#import <Mailer/SOGoMailObject.h>
 
 #import "MailerUI/WOContext+UIxMailer.h"
 #import "UIxMailRenderingContext.h"
@@ -303,15 +304,14 @@
   NSMutableString *filename;
   NSString *extension;
 
-  filename = [NSMutableString stringWithString: [self filename]];
-  if ([filename length])
+  if ([[self filename] length])
     // We replace any slash by a dash since Apache won't allow encoded slashes by default.
     // See http://httpd.apache.org/docs/2.2/mod/core.html#allowencodedslashes
-    filename = [NSMutableString stringWithString: [filename stringByReplacingString: @"/" withString: @"-"]];
+    filename = [NSMutableString stringWithString: [[self filename] stringByReplacingString: @"/" withString: @"-"]];
   else
-    [filename appendFormat: @"%@-%@",
-	      [self labelForKey: @"Untitled"],
-	      [bodyPart nameInContainer]];
+    filename = [NSMutableString stringWithFormat: @"%@-%@",
+                               [self labelForKey: @"Untitled"],
+                                [bodyPart nameInContainer]];
 
   if (![[filename pathExtension] length])
     {
