@@ -11,6 +11,7 @@ Bug fixes
  - [core] allow super users to modify any event (#4216)
  - [core] correctly handle the full cert chain in S/MIME
  - [core] handle multidays events in freebusy data
+ - [core] avoid exception on recent GNUstep when attached file has no filename (#4702)
 
 4.0.7 (2019-02-27)
 ------------------
